--- a/Mechanical Trash/pom.xml
+++ b/Mechanical Trash/pom.xml
@@ -16,4 +16,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>net.sourceforge.tess4j</groupId>
+  		<artifactId>tess4j</artifactId>
+  		<version>4.3.0</version>
+  	</dependency>
+  </dependencies>
 </project>
