--- a/Mechanical Trash/pom.xml
+++ b/Mechanical Trash/pom.xml
@@ -22,5 +22,51 @@
   		<artifactId>tess4j</artifactId>
   		<version>4.3.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.mariuszgromada.math</groupId>
+  		<artifactId>MathParser.org-mXparser</artifactId>
+  		<version>4.2.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-math3</artifactId>
+  		<version>3.6.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.matheclipse</groupId>
+  		<artifactId>matheclipse-core</artifactId>
+  		<version>1.0.0-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+    	<groupId>org.apfloat</groupId>
+    	<artifactId>apfloat</artifactId>
+    	<version>1.8.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>de.uni-mannheim.rz.krum</groupId>
+  		<artifactId>jas</artifactId>
+  		<version>2.6.5961</version>
+  	</dependency>
   </dependencies>
+  
+  <repositories> 
+  <repository>
+    <id>snapshots-repo</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    <releases>
+      <enabled>false</enabled>
+    </releases>
+    <snapshots>
+      <enabled>true</enabled>
+    </snapshots>
+  </repository>
+  <repository>
+    <id>jas-repository</id>
+    <url>http://krum.rz.uni-mannheim.de/maven-repository</url>
+  </repository>
+  <repository>
+    <id>Lab4Inf</id>
+    <url>http://www.lab4inf.fh-muenster.de/lab4inf/maven-repository</url>
+  </repository>
+</repositories>
 </project>
